--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "commit": "git-cz",
     "semantic-release": "semantic-release",
+    "precommit": "lint-staged",
     "prepush": "npm run build",
     "commitmsg": "commitlint -E HUSKY_GIT_PARAMS"
   },
