--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "commitmsg": "commitlint -E HUSKY_GIT_PARAMS"
   },
   "license": "Apache-2.0",
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
   "config": {
     "commitizen": {
       "path": "node_modules/cz-conventional-changelog"
@@ -39,6 +44,7 @@
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/git": "^9.0.0",
+    "@semantic-release/github": "^7.0.7",
     "@semantic-release/npm": "^7.0.5",
     "@semantic-release/release-notes-generator": "^9.0.1",
     "@types/axios": "^0.14.0",
@@ -56,7 +62,7 @@
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "lodash.merge": "^4.6.2",
-    "prettier": "^2.0.5",
+    "prettier": "^2.1.0",
     "rimraf": "^3.0.2",
     "typescript": "^3.9.7",
     "webpack": "^4.44.1"
@@ -65,7 +71,7 @@
     "axios": "^0.19.2",
     "cross-fetch": "^3.0.5",
     "fsxa-api": "^1.0.0",
-    "fsxa-pattern-library": "^1.0.0",
+    "fsxa-pattern-library": "~1.1.1",
     "fsxa-ui": "0.1.38",
     "vuex": "^3.5.1"
   },
@@ -74,7 +80,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,vue,ts,tsx}": [
-      "vue-cli-service lint",
+      "prettier --write",
       "git add"
     ]
   },
