--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fsxa-nuxt-module",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "",
   "main": "./dist/module/index.js",
   "types": "dist/index.d.ts",
@@ -65,7 +65,8 @@
     "prettier": "^2.1.0",
     "rimraf": "^3.0.2",
     "typescript": "^3.9.7",
-    "webpack": "^4.44.1"
+    "webpack": "^4.44.1",
+    "semantic-release": "^17.1.1"
   },
   "dependencies": {
     "axios": "^0.19.2",
