--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.4",
   "description": "",
   "main": "./dist/module/index.js",
-  "types": "dist/index.d.ts",
+  "typings": "dist/index.d.ts",
   "files": [
     "dist",
     "templates",
