--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "cross-fetch": "^3.0.5",
     "express": "^4.17.1",
     "fsxa-api": "^1.0.0",
-    "fsxa-pattern-library": "~1.1.1",
+    "fsxa-pattern-library": "^1.1.2",
     "fsxa-ui": "0.1.38",
     "lodash.merge": "^4.6.2",
     "vuex": "^3.5.1"
