--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "cross-fetch": "^3.0.5",
     "express": "^4.17.1",
     "fsxa-api": "^5.1.0",
-    "fsxa-pattern-library": "^3.1.0",
+    "fsxa-pattern-library": "^3.3.0-alpha.4",
     "lodash.merge": "^4.6.2",
     "vuex": "^3.5.1"
   },
