--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
   },
   "keywords": [],
   "author": "Tobias Golbs <golbs@e-spirit.com>",
+  "contributors": [
+    "Dominik Barczewski <barczewski@e-spirit.com>"
+  ],
   "devDependencies": {
     "@commitlint/cli": "^9.1.2",
     "@commitlint/config-conventional": "^13.1.0",
@@ -59,8 +62,8 @@
   "dependencies": {
     "cross-fetch": "^3.1.4",
     "express": "^4.17.1",
-    "fsxa-api": "^5.3.0",
-    "fsxa-pattern-library": "^3.2.3",
+    "fsxa-api": "^5.3.1",
+    "fsxa-pattern-library": "^3.2.4",
     "lodash.camelcase": "^4.3.0",
     "lodash.merge": "^4.6.2",
     "lodash.startcase": "^4.4.0"
