--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint src/**/*",
     "prebuild": "rimraf dist",
     "build": "tsc",
+    "build:local": "rimraf fsxa-nuxt-module-*.tgz && npm version prerelease --no-git-tag-version --preid alpha && npm run build && npm pack",
     "commit": "git-cz",
     "semantic-release": "semantic-release",
     "precommit": "lint-staged",
