--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
   "dependencies": {
     "cross-fetch": "^3.1.4",
     "express": "^4.17.1",
-    "fsxa-api": "^5.3.1",
-    "fsxa-pattern-library": "^3.2.4",
+    "fsxa-api": "^6.0.0-alpha.1",
+    "fsxa-pattern-library": "^4.0.0-alpha.4",
     "lodash.camelcase": "^4.3.0",
     "lodash.merge": "^4.6.2",
     "lodash.startcase": "^4.4.0"
